# storage/api-docs/api-docs.json
@@ -11,6 +11,42 @@
         }
     ],
     "paths": {
+        "/api/place": {
+            "get": {
+                "tags": [
+                    "Place"
+                ],
+                "summary": "Get list place",
+                "description": "Get list place",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "Thành công"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "User Manager"
+                ],
+                "summary": "Get list user",
+                "description": "Nhận thông tin của user",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "Thành công"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
         "/api/auth/register": {
             "post": {
                 "tags": [
